--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pomodoro Azul</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/clime.css') }}">
+  <link rel="stylesheet" href="/static/css/style.css">
   <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 </head>
 <body class="work-mode">
@@ -13,7 +11,7 @@
 
   <!-- Cabeçalho com Título no Canto Superior Esquerdo -->
   <header>
-    <h1 class="site-title">Cinnamoroll Pomodoro</h1>
+    <h1 class="site-title">Cinnmoroll Pomodoro</h1>
   </header>
 
   <!-- Pomodoro -->
