--- a/app/static/css/base/reset.css
+++ b/app/static/css/base/reset.css
@@ -1,16 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    transition: all 0.3s ease;
-  }
-  
-  body {
-    font-family: 'Nunito', sans-serif;
-    min-height: 100vh;
-    color: #2E2E2E;
-    line-height: 1.6;
-    padding: 20px;
-    position: relative;
-    overflow-x: hidden;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  min-height: 100vh;
+  color: #2e2e2e;
+  line-height: 1.6;
+  padding: 20px;
+  position: relative;
+  overflow-x: hidden;
+}
