--- a/app/static/css/layout/background.css
+++ b/app/static/css/layout/background.css
@@ -1,46 +1,71 @@
 .background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    opacity: 0.9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("/static/images/clouds-background.jpg") no-repeat center
+    center;
+  background-size: cover;
+  z-index: -1;
+  opacity: 0.9;
+}
+
+@media (max-width: 768px) {
+  .background {
+    background-size: contain;
   }
-  
-  @keyframes clouds {
-    from { background-position: 0 0; }
-    to { background-position: 200% 0; }
+}
+
+@media (max-width: 480px) {
+  .background {
+    background-size: contain;
+    background-position: top;
   }
-  
-  .work-mode .background {
-    background: 
-      url('/static/images/clouds.png') repeat-x,
-      linear-gradient(160deg, var(--cinnamoroll-blue) 20%, #8BC7EB 100%);
-    animation: clouds 20s linear infinite;
+}
+
+@keyframes clouds {
+  from {
+    background-position: 0 0;
   }
-  
-  .short-break-mode .background {
-    background: 
-      radial-gradient(circle at 50% 20%, var(--short-break-purple), #9370DB),
-      repeating-linear-gradient(
-        45deg,
-        transparent,
-        transparent 10px,
-        rgba(255,255,255,0.1) 10px,
-        rgba(255,255,255,0.1) 20px
-      );
+  to {
+    background-position: 200% 0;
   }
-  
-  .long-break-mode .background {
-    background: 
-      linear-gradient(to bottom right, var(--long-break-indigo), #483D8B),
-      repeating-radial-gradient(
-        circle at 50% 50%,
-        transparent,
-        transparent 15px,
-        rgba(255,255,255,0.05) 15px,
-        rgba(255,255,255,0.05) 30px
-      );
-    background-blend-mode: overlay;
-  }
+}
+
+.work-mode .background {
+  background: url("/static/images/clouds.png") repeat-x,
+    linear-gradient(160deg, var(--cinnamoroll-blue) 20%, #8bc7eb 100%);
+  animation: clouds 20s linear infinite;
+}
+
+.short-break-mode .background {
+  background: radial-gradient(
+      circle at 50% 20%,
+      var(--short-break-purple),
+      #9370db
+    ),
+    repeating-linear-gradient(
+      45deg,
+      transparent,
+      transparent 10px,
+      rgba(255, 255, 255, 0.1) 10px,
+      rgba(255, 255, 255, 0.1) 20px
+    );
+}
+
+.long-break-mode .background {
+  background: linear-gradient(
+      to bottom right,
+      var(--long-break-indigo),
+      #483d8b
+    ),
+    repeating-radial-gradient(
+      circle at 50% 50%,
+      transparent,
+      transparent 15px,
+      rgba(255, 255, 255, 0.05) 15px,
+      rgba(255, 255, 255, 0.05) 30px
+    );
+  background-blend-mode: overlay;
+}
