--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,15 +36,18 @@
 
       <!-- Lista de Tarefas -->
       <div class="task-box" style="width: 80%">
-        <h2>✨ Tarefas</h2>
-        <form id="group-form">
-          <input
-            type="text"
-            id="group-input"
-            placeholder="Nome novo grupo..."
-          />
-          <button type="submit">+</button>
-        </form>
+        <div class="task-header">
+          <h2 class="task-title">✨ Tarefas</h2>
+          <form id="group-form" class="group-form">
+            <input
+              type="text"
+              id="group-input"
+              placeholder="Nome novo grupo..."
+            />
+            <button type="submit">+</button>
+          </form>
+        </div>
+
         <div class="group-tabs" id="group-tabs">
           <!-- Group tabs will be added here dynamically -->
         </div>
